Add server startup listener callback. Add gameRestart() to config spec. Add missing handling for clientRestart(). Fire loadListener if config is modified in GUI. Migrate to jspecify for null types.